--- a/.github/workflows/core-st.yml
+++ b/.github/workflows/core-st.yml
@@ -6,6 +6,7 @@ on:
   pull_request:
     branches:
       - n4.3.1-wasm
+  workflow_dispatch:
 
 env:
   FFMPEG_ST: yes
@@ -17,25 +18,24 @@ env:
 jobs:
   build-libs:
     strategy:
-      max-parallel: 1
       matrix:
         script:
           - build-zlib
-          - build-x264
-          - build-x265
-          - build-libvpx
-          - build-wavpack
-          - build-lame
-          - build-fdk-aac
+          # - build-x264
+          # - build-x265
+          # - build-libvpx
+          # - build-wavpack
+          # - build-lame
+          # - build-fdk-aac
           - build-ogg
           - build-vorbis
-          - build-theora
+          # - build-theora
           - build-opus
-          - build-libwebp
-          - build-freetype2
-          - build-fribidi
-          - build-harfbuzz
-          - build-libass
+          # - build-libwebp
+          # - build-freetype2
+          # - build-fribidi
+          # - build-harfbuzz
+          # - build-libass
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
