Add mp3 output support (for preview files)

--- a/.github/workflows/core-st.yml
+++ b/.github/workflows/core-st.yml
@@ -26,7 +26,7 @@ jobs:
           # - build-x265
           # - build-libvpx
           # - build-wavpack
-          # - build-lame
+          - build-lame
           # - build-fdk-aac
           - build-ogg
           - build-vorbis
